bach-tests/src/sync/snapshots/bach_tests__sync__mutex__mutex_lock_contention.snap
---
source: bach-tests/src/sync/mutex.rs
expression: LOG.check()
---
[
    MutexAcquired {
        task: 0,
    },
    MutexReleased {
        task: 0,
    },
    MutexAcquired {
        task: 1,
    },
    MutexReleased {
        task: 1,
    },
    MutexAcquired {
        task: 1,
    },
    MutexReleased {
        task: 1,
    },
    MutexAcquired {
        task: 0,
    },
    MutexReleased {
        task: 0,
    },
]
